# OpenHouse

./: ACTOR_REFACTOR_PLAN.md  BUGFIX_DICE_MAXBET_LP_DEPOSIT.md  CLAUDE.md  CRASH_FRONTEND_PLAN.md  CRASH_SECURE_PRECOMMIT_PLAN.md  Cargo.toml  DEFI_ACCOUNTING_SECURITY_FIXES.md  DEPOSIT_FEE_RECONCILIATION_PLAN.md  DESIGN_REFACTOR_PLAN.md  DICE_ANIMATION_PLAN.md  DICE_ANIMATION_UPGRADE_PLAN.md  DICE_BUGS_FIX_PLAN.md  DICE_LIQUIDITY_SECURITY_FIX_PLAN.md  DICE_UI_REFACTOR_PLAN.md  HYBRID_ARCHITECTURE_PLAN.md  LIFE2_HYBRID_GC_PLAN.md  LIFE2_OBSERVATIONS.md  LIFE2_PURE_ONCHAIN_PLAN.md  LIFE2_QUADRANT_WIPE_PLAN.md  LIFE2_SPARSE_PLAN.md  LP_WITHDRAWAL_FEE_PLAN.md  OPTIMISTIC_PLACEMENT_PLAN.md  PLAN.md  PLAN_BETTING_RAIL_REDESIGN.md  PLAN_CKUSDT_CLEANUP.md  PLAN_CKUSDT_MIGRATION.md  PLAN_CKUSDT_REPLACEMENT.md  PLAN_CKUSDT_TRANSFERS.md  PLAN_DICE_BETTING_RAIL.md  PLAN_DICE_CLIPPY_CLEANUP.md  PLAN_DICE_DUST_FIX.md  PLAN_DICE_LP_UI_REFACTOR.md  PLAN_DICE_UNIFIED_UI.md  PLAN_FIX_CKUSDT_FEE_ACCOUNTING.md  PLAN_LOGO_INTEGRATION.md  PLAN_PLINKO_BETTING.md  PLAN_PLINKO_BETTING_RAIL.md  PLAN_PLINKO_PIXEL_ART.md  PLAN_PLINKO_PRECISION.md  PLAN_PLINKO_SIMPLIFY.md  (+47 more)
.ralph/: CLAUDE.md  (+4 more)
life_core/: Cargo.toml
life_core/src/: cell.rs  lib.rs  step.rs
life_simulation/: .env.example  Cargo.toml  Dockerfile  fly.toml
life_simulation/src/: main.rs
life_simulation/src/http/: health.rs  mod.rs
life_simulation/src/ic_client/: mod.rs  poller.rs  types.rs
life_simulation/src/simulation/: grid.rs  mod.rs  runner.rs
life_simulation/src/websocket/: broadcast.rs  handler.rs  mod.rs  protocol.rs
(+431 files in other folders)
