[package]
name = "life_core"
version = "0.1.0"
edition = "2021"
description = "Pure Game of Life simulation logic - shared between IC canister and Fly.io server"

[features]
default = []
serde = ["dep:serde"]
candid = ["dep:candid", "dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
candid = { version = "0.10", optional = true }
