[package]
name = "life_simulation"
version = "0.1.0"
edition = "2021"
description = "Game of Life simulation server for Fly.io - runs 24/7 at 10 gen/sec"

[[bin]]
name = "life_simulation"
path = "src/main.rs"

[dependencies]
life_core = { path = "../life_core", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IC Agent for querying canister
ic-agent = "0.37"
candid = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Futures for WebSocket
futures = "0.3"
